--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ humanize = "^3.13.1"
 cryptography = "^42.0.5"
 fpdf2 = "^2.7.1"
 attrs = "^23.1.0"
-prometrix = "0.1.16"
+prometrix = "0.1.19a3"
 hikaru-model-26 = "^1.1.1"
 apprise = "1.6.0"
 rocketchat-api = "^1.30.0"
